<resources>
    <string name="app_name">BusTours</string>
    <string name="title_search">Search</string>
    <string name="title_trips">Trips</string>
    <string name="title_profile">Profile</string>


    <!--Filters-->
    <string name="europe">Europe</string>
    <string name="popular">Popular</string>
    <string name="newTrips">New</string>
    <string name="students">For Students</string>

    <!--Main-->
    <string name="price">Price</string>
    <string name="tripPlan">Trip Plan</string>
    <string name="Buy">Reserve</string>
    <string name="priceDetails">Price:</string>
    <string name="TourManager">Tour Manager</string>

    <!--Auth-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>

    <!--Admin-->
    <string name="createButton">Create</string>
    <string name="new_admin_creation">Make New Admin</string>
    <string name="upload_tour_image">Upload Tour Image</string>
    <string name="tour_info">Tour Info</string>
    <string name="tour_trip">Trip Title</string>
    <string name="tour_price">Trip Price</string>
    <string name="manager_info">Manager Info</string>
    <string name="manager_telegram">Telegram NickName</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="viber">Viber</string>
    <string name="add_manager">Create Manager</string>
    <string name="add_manager_by_email">Add Manager by Email</string>
    <string name="tour_pick_up">Pick Up</string>
    <string name="see_all_reservations">See All Reservations</string>
    <string name="all_reservations">All Reservations</string>
    <string name="all_managers">All Managers</string>
    <string-array name="categories">
        <item>New</item>
        <item>Popular</item>
        <item>Europe</item>
        <item>For Students</item>
    </string-array>

    <!--Users-->
    <string name="log_out">Log Out</string>
    <string name="done">Done</string>

    <!--Booking-->
    <string name="total">Total</string>

    <!--Likes-->
    <string name="likes">Likes</string>
    <string name="pop_up_title">Are you sure?</string>
    <string name="pop_up_description">If you dislike this trip, you never find it.</string>
    <string name="pop_up_ok">Ok</string>
    <string name="pop_up_cancel">Cancel</string>

    <!--Profile-->
    <string name="my_reservations">My Reservations</string>

    <string-array name="bus_travel_tips">
        <item>Reserve tickets ahead for the best deals and assured seating.</item>
        <item>Carry only what\'s necessary to avoid clutter and for ease of movement.</item>
        <item>Choose layers and comfy clothing to adjust to temperature changes.</item>
        <item>Have books, music, or movies ready for on-the-go entertainment.</item>
        <item>Bring along snacks and drinks to avoid hunger or thirst.</item>
        <item>Keep your valuables in a secure, personal bag.</item>
        <item>Make sure your electronics are fully charged before departing.</item>
        <item>Plan to arrive at the station well before your departure time.</item>
        <item>Consider a travel pillow and earplugs for overnight or long rides.</item>
        <item>Stay aware of your itinerary, stops, and transfers.</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>