<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.AdminPanelActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/tour_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"/>

            <TextView
                android:id="@+id/log_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@color/black"
                android:background="@drawable/rect_back"
                android:padding="5dp"
                android:textSize="14sp"
                android:layout_margin="10dp"/>


            <TextView
                android:id="@+id/upload_image_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_tour_image"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="10dp"
                android:background="@drawable/rect_back"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tour_info"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/tour_naming_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tour_trip"
            android:inputType="text"/>

        <EditText
            android:id="@+id/tour_price_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tour_price"
            android:inputType="number"/>

        <EditText
            android:id="@+id/tour_plan_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tripPlan"
            android:inputType="textImeMultiLine|textMultiLine"/>

        <EditText
            android:id="@+id/tour_pick_up_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tour_pick_up"
            android:inputType="textImeMultiLine|textMultiLine" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_categories"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager_info"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_manager"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:layout_marginHorizontal="10dp"/>

        <EditText
            android:id="@+id/manager_name_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/manager_email_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/telegram_nickname_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manager_telegram"/>

        <EditText
            android:id="@+id/watsapp_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/whatsapp"/>

        <EditText
            android:id="@+id/viber_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/viber"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_trip_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:elevation="8dp"
            android:text="@string/done"
            android:textAllCaps="false"
            app:cornerRadius="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/all_reservations_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:elevation="8dp"
            android:textColor="@color/blue"
            android:text="@string/see_all_reservations"
            android:textAllCaps="false"
            app:cornerRadius="4dp" />

    </LinearLayout>



</androidx.core.widget.NestedScrollView>