<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".admin.ManagerAdditionActivity">

    <ImageView
        android:id="@+id/back_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager_info"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginVertical="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo_manager"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/manager_name_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/manager_email_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/telegram_nickname_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/manager_telegram"/>

    <EditText
        android:id="@+id/watsapp_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/whatsapp"/>

    <EditText
        android:id="@+id/viber_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/viber"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_trip_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:elevation="8dp"
        android:text="@string/done"
        android:textAllCaps="false"
        app:cornerRadius="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_managers"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/reservations_recyclerView"/>

</LinearLayout>