<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_trips">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.bus_tours_ex.apps.bustours.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_likes"
        android:name="com.bus_tours_ex.apps.bustours.ui.likes.LikeFragment"
        android:label="@string/likes"
        tools:layout="@layout/fragment_like" />

    <fragment
        android:id="@+id/navigation_trips"
        android:name="com.bus_tours_ex.apps.bustours.ui.trips.TripsFragment"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bus_tours_ex.apps.bustours.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>