<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.AdminCreationActivity">

    <ImageView
        android:id="@+id/back_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:layout_margin="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/email_admin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password_admin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:elevation="8dp"
        android:text="@string/createButton"
        android:textAllCaps="false"
        app:cornerRadius="4dp" />

</LinearLayout>