<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trips.TripDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingbar"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black"
            app:toolbarId="@id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="CocktailsCreator">

            <ImageView
                android:id="@+id/background_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/europe_tours_img"
                android:transitionName="foodImage" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:rotation="180"
                android:src="@drawable/shadow_effect"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    android:background="@drawable/rect_back">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priceDetails"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="5dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="20sp"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true">

                    <RatingBar
                        android:id="@+id/rtbProductRating"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:numStars="5"
                        android:rating="3.5"
                        android:isIndicator="false"
                        style="?android:attr/ratingBarStyleSmall"
                        />

                </LinearLayout>

            </RelativeLayout>



            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/back_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:tint="@color/white"
                        android:src="@drawable/baseline_arrow_back_ios_new_24"/>

                    <TextView
                        android:id="@+id/title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Title"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:textSize="24sp"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>



            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TourManager"
                android:textSize="32sp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="0dp"
                app:strokeColor="@color/blue"
                app:strokeWidth="1dp"
                android:elevation="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cardCornerRadius="10dp"
                            android:layout_margin="10dp"
                            android:layout_gravity="center_horizontal"
                            >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_launcher_background"/>

                        </com.google.android.material.card.MaterialCardView>



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Name"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            />

                    </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:gravity="center_vertical"
                       android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">


                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:elevation="10dp"
                                android:padding="8dp"
                                android:layout_margin="5dp"
                                android:src="@drawable/telegram"
                                app:tint="@color/white" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_toEndOf="@+id/card_share"
                            android:text="Telegram"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:elevation="10dp"
                            android:padding="8dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/whatsapp"
                            app:tint="@color/white" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_toEndOf="@+id/card_share"
                            android:text="Whatsapp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:elevation="10dp"
                            android:padding="8dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/viber"
                            app:tint="@color/white" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_vertical"
                            android:layout_toEndOf="@+id/card_share"
                            android:text="Viber"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                   </LinearLayout>

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tripPlan"
                android:textSize="32sp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:layout_marginTop="16dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue"
                app:cardCornerRadius="0dp"
                android:elevation="8dp"
                >

                <TextView
                    android:id="@+id/plan_trip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reserve_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@color/white"
                app:strokeWidth="0dp"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/blue"
                android:text="@string/Buy"
                android:layout_weight="1"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>